# DS-mid

./: CMakeLists.txt  Main.cpp  README.md  Stack.cpp  convert.cpp  fix_to_fix.cpp  header.hpp  in_to_postfix.cpp  in_to_prefix.cpp  main.cpp  post_to_in.cpp  post_to_prefix.cpp  pre_to_infix.cpp  pre_to_post.cpp  sort.cpp  validate.cpp
